--- a/megabox.css
+++ b/megabox.css
@@ -124,4 +124,41 @@ a:visited {
 .movie img {
   width: 230px;
   height: 330px;
+  border-radius: 5px;
+}
+
+.movie_btn {
+  padding-top: 3px;
+}
+
+.movie_btn > button:first-child {
+  width: 68px;
+  height: 32px;
+  color: white;
+  background-color: transparent;
+  border: 0.5px solid rgb(158, 156, 156);
+  border-radius: 3px;
+}
+
+.movie_btn > button:last-child {
+  width: 158px;
+  height: 32px;
+  background-color: rgb(0, 123, 147);
+  border: none;
+  border-radius: 3px;
+  color: white;
+}
+
+.search_link {
+  background-color: aqua;
+  justify-content: space-around;
+  margin-top: 50px;
+  padding: 20px 0 20px 0;
+}
+
+.search_bar {
+  color: #9d9898;
+}
+
+.search_bar > input {
 }
