--- a/megabox.css
+++ b/megabox.css
@@ -15,9 +15,7 @@ header {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding-left: 200px;
-  padding-right: 200px;
-  padding: 10px;
+  padding: 20px 300px 20px 300px;
 }
 
 .little_menu_left > ul {
@@ -132,6 +130,7 @@ a:visited {
 }
 
 .movie_btn > button:first-child {
+  cursor: pointer;
   width: 68px;
   height: 32px;
   color: white;
@@ -147,10 +146,11 @@ a:visited {
   border: none;
   border-radius: 3px;
   color: white;
+  cursor: pointer;
 }
 
 .search_link {
-  background-color: aqua;
+  background-color: rgba(0, 0, 0, 0.2);
   justify-content: space-around;
   margin-top: 50px;
   padding: 20px 0 20px 0;
@@ -158,7 +158,26 @@ a:visited {
 
 .search_bar {
   color: #9d9898;
+  border-bottom: 1px solid #423e3e;
 }
 
 .search_bar > input {
+  border: 0;
+  background-color: transparent;
+  padding-left: 10px;
+  color: #787878;
+}
+
+.search_bar > input:focus {
+  outline: none;
+}
+
+.search_bar i {
+  cursor: pointer;
+}
+
+.search_info img {
+  vertical-align: middle;
+  margin-right: 2px;
+  color: #9d9898;
 }
