megabox.css: css
애니메이션 강사님께서 한 번 시도

--- a/megabox.css
+++ b/megabox.css
@@ -191,9 +191,8 @@ a:visited {
 }
 
 .mouse > img {
-    animation: mouse 1s linear infinite;
+    animation: mouse 1s linear alternate infinite 2000;
     position: absolute;
-    animation-direction: alternate;
 }
 
 @keyframes mouse {
